@@ -13,8 +13,6 @@ Instead of double-clicking, you should write to the console:
 
 `java -jar Universal-Forge-Installer-1.0.jar`
 
-(to reduce the output - `java -jar Universal-Forge-Installer-1.0.jar --enable-native-access=ALL-UNNAMED`)
-
 # How do I change the appearance of the application?
 At the moment, almost all appearance settings are in the [styles.css file](https://github.com/prostoblodi/universal_forge_installer/blob/main/src/main/resources/styles.css), and you have to change them manually. In the future, this will be built into the application itself.
 
